--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,13 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to SchoolHub documentation!
 
-## What is Nextra?
+## What is SchoolHub?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+SchoolHub is a *centralized* tool, which is supposed to be used by student.
+All productive tools used in school is linked to this school.
 
-## Documentation
+## What is the purpose for this page?
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+This Page is the documentation of this tool.
+From Technical documentation to guides how to use this tool.
